funtools/filter/idx.output
State 3 conflicts: 1 reduce/reduce


Grammar

    0 $accept: idx $end

    1 idx: expr

    2 expr: rowlist
    3     | expr OR expr
    4     | expr AND expr
    5     | '(' expr ')'

    6 rowlist: REG
    7        | FUNC
    8        | value EQ value
    9        | value NE value
   10        | value '<' value
   11        | value LE value
   12        | value '>' value
   13        | value GE value

   14 value: NUM
   15      | COL
   16      | INDEF
   17      | FUNC
   18      | value '+' value
   19      | value '-' value
   20      | value '*' value
   21      | value '/' value
   22      | value '%' value
   23      | value '&' value
   24      | value '|' value
   25      | value '^' value
   26      | '!' value
   27      | '~' value
   28      | '-' value
   29      | '(' value ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 26
'%' (37) 22
'&' (38) 23
'(' (40) 5 29
')' (41) 5 29
'*' (42) 20
'+' (43) 18
'-' (45) 19 28
'/' (47) 21
'<' (60) 10
'>' (62) 12
'^' (94) 25
'|' (124) 24
'~' (126) 27
error (256)
NUM (258) 14
COL (259) 15
FUNC (260) 7 17
REG (261) 6
INDEF (262) 16
OR (263) 3
AND (264) 4
NE (265) 9
EQ (266) 8
GE (267) 13
LE (268) 11
UMINUS (269)


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
idx (30)
    on left: 1, on right: 0
expr (31)
    on left: 2 3 4 5, on right: 1 3 4 5
rowlist (32)
    on left: 6 7 8 9 10 11 12 13, on right: 2
value (33)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29,
    on right: 8 9 10 11 12 13 18 19 20 21 22 23 24 25 26 27 28 29


state 0

    0 $accept: . idx $end

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 3
    REG    shift, and go to state 4
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 9

    idx      go to state 10
    expr     go to state 11
    rowlist  go to state 12
    value    go to state 13


state 1

   14 value: NUM .

    $default  reduce using rule 14 (value)


state 2

   15 value: COL .

    $default  reduce using rule 15 (value)


state 3

    7 rowlist: FUNC .
   17 value: FUNC .

    $end      reduce using rule 7 (rowlist)
    OR        reduce using rule 7 (rowlist)
    AND       reduce using rule 7 (rowlist)
    ')'       reduce using rule 7 (rowlist)
    ')'       [reduce using rule 17 (value)]
    $default  reduce using rule 17 (value)


state 4

    6 rowlist: REG .

    $default  reduce using rule 6 (rowlist)


state 5

   16 value: INDEF .

    $default  reduce using rule 16 (value)


state 6

   28 value: '-' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 16


state 7

   26 value: '!' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 17


state 8

   27 value: '~' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 18


state 9

    5 expr: '(' . expr ')'
   29 value: '(' . value ')'

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 3
    REG    shift, and go to state 4
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 9

    expr     go to state 19
    rowlist  go to state 12
    value    go to state 20


state 10

    0 $accept: idx . $end

    $end  shift, and go to state 21


state 11

    1 idx: expr .
    3 expr: expr . OR expr
    4     | expr . AND expr

    OR   shift, and go to state 22
    AND  shift, and go to state 23

    $default  reduce using rule 1 (idx)


state 12

    2 expr: rowlist .

    $default  reduce using rule 2 (expr)


state 13

    8 rowlist: value . EQ value
    9        | value . NE value
   10        | value . '<' value
   11        | value . LE value
   12        | value . '>' value
   13        | value . GE value
   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    NE   shift, and go to state 27
    EQ   shift, and go to state 28
    '<'  shift, and go to state 29
    '>'  shift, and go to state 30
    GE   shift, and go to state 31
    LE   shift, and go to state 32
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37


state 14

   17 value: FUNC .

    $default  reduce using rule 17 (value)


state 15

   29 value: '(' . value ')'

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 38


state 16

   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value
   28      | '-' value .

    $default  reduce using rule 28 (value)


state 17

   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value
   26      | '!' value .

    $default  reduce using rule 26 (value)


state 18

   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value
   27      | '~' value .

    $default  reduce using rule 27 (value)


state 19

    3 expr: expr . OR expr
    4     | expr . AND expr
    5     | '(' expr . ')'

    OR   shift, and go to state 22
    AND  shift, and go to state 23
    ')'  shift, and go to state 39


state 20

    8 rowlist: value . EQ value
    9        | value . NE value
   10        | value . '<' value
   11        | value . LE value
   12        | value . '>' value
   13        | value . GE value
   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value
   29      | '(' value . ')'

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    NE   shift, and go to state 27
    EQ   shift, and go to state 28
    '<'  shift, and go to state 29
    '>'  shift, and go to state 30
    GE   shift, and go to state 31
    LE   shift, and go to state 32
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37
    ')'  shift, and go to state 40


state 21

    0 $accept: idx $end .

    $default  accept


state 22

    3 expr: expr OR . expr

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 3
    REG    shift, and go to state 4
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 9

    expr     go to state 41
    rowlist  go to state 12
    value    go to state 13


state 23

    4 expr: expr AND . expr

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 3
    REG    shift, and go to state 4
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 9

    expr     go to state 42
    rowlist  go to state 12
    value    go to state 13


state 24

   24 value: value '|' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 43


state 25

   25 value: value '^' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 44


state 26

   23 value: value '&' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 45


state 27

    9 rowlist: value NE . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 46


state 28

    8 rowlist: value EQ . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 47


state 29

   10 rowlist: value '<' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 48


state 30

   12 rowlist: value '>' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 49


state 31

   13 rowlist: value GE . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 50


state 32

   11 rowlist: value LE . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 51


state 33

   18 value: value '+' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 52


state 34

   19 value: value '-' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 53


state 35

   20 value: value '*' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 54


state 36

   21 value: value '/' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 55


state 37

   22 value: value '%' . value

    NUM    shift, and go to state 1
    COL    shift, and go to state 2
    FUNC   shift, and go to state 14
    INDEF  shift, and go to state 5
    '-'    shift, and go to state 6
    '!'    shift, and go to state 7
    '~'    shift, and go to state 8
    '('    shift, and go to state 15

    value  go to state 56


state 38

   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value
   29      | '(' value . ')'

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37
    ')'  shift, and go to state 40


state 39

    5 expr: '(' expr ')' .

    $default  reduce using rule 5 (expr)


state 40

   29 value: '(' value ')' .

    $default  reduce using rule 29 (value)


state 41

    3 expr: expr . OR expr
    3     | expr OR expr .
    4     | expr . AND expr

    AND  shift, and go to state 23

    $default  reduce using rule 3 (expr)


state 42

    3 expr: expr . OR expr
    4     | expr . AND expr
    4     | expr AND expr .

    $default  reduce using rule 4 (expr)


state 43

   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   24      | value '|' value .
   25      | value . '^' value

    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 24 (value)


state 44

   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value
   25      | value '^' value .

    '&'  shift, and go to state 26
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 25 (value)


state 45

   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   23      | value '&' value .
   24      | value . '|' value
   25      | value . '^' value

    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 23 (value)


state 46

    9 rowlist: value NE value .
   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 9 (rowlist)


state 47

    8 rowlist: value EQ value .
   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 8 (rowlist)


state 48

   10 rowlist: value '<' value .
   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 10 (rowlist)


state 49

   12 rowlist: value '>' value .
   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 12 (rowlist)


state 50

   13 rowlist: value GE value .
   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 13 (rowlist)


state 51

   11 rowlist: value LE value .
   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    '|'  shift, and go to state 24
    '^'  shift, and go to state 25
    '&'  shift, and go to state 26
    '+'  shift, and go to state 33
    '-'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 11 (rowlist)


state 52

   18 value: value . '+' value
   18      | value '+' value .
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 18 (value)


state 53

   18 value: value . '+' value
   19      | value . '-' value
   19      | value '-' value .
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 19 (value)


state 54

   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   20      | value '*' value .
   21      | value . '/' value
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    $default  reduce using rule 20 (value)


state 55

   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   21      | value '/' value .
   22      | value . '%' value
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    $default  reduce using rule 21 (value)


state 56

   18 value: value . '+' value
   19      | value . '-' value
   20      | value . '*' value
   21      | value . '/' value
   22      | value . '%' value
   22      | value '%' value .
   23      | value . '&' value
   24      | value . '|' value
   25      | value . '^' value

    $default  reduce using rule 22 (value)
